2003-10-09  Carl Worth  <cworth@isi.edu>

	* src/cairo_font.c: Stub out NULL_POINTER errors as
	CAIRO_STATUS_SUCCESS so that drawing to off-screen images still
	works even though text does not yet.

2003-10-04  Carl Worth  <cworth@isi.edu>

	* src/cairo_hull.c (_cairo_hull_compute): Add cairo_hull.c to
	compute a convex hull, (using Graham scan algorithm).

	* src/cairo_pen.c (_cairo_pen_add_points): Generate convex hull of
	pen after adding new points.

	* src/cairoint.h: Rename pen->vertex to pen->vertices

	* Replaced "pt" with "point" in about a zillion places.

	* src/cairo.c (cairo_destroy): Fix to continue with destroy even
	in the face of non-zero status.
	(cairo_set_target_surface):
	(cairo_set_target_image): Don't do anything even if cr->status is
	CAIRO_STATUS_NO_TARGET_SURFACE.
	(cairo_status_string): Report "<unknown error status>" rather than
	en empty string.

2003-10-01  Carl Worth  <cworth@isi.edu>

	* src/cairo_gstate.c (_cairo_gstate_init_copy): Don't choke if
	asked to copy a gstate with a NULL font.

	* src/cairo_font.c (_cairo_font_init): 
	(_cairo_font_init_copy): 
	(_cairo_font_copy): 
	(_cairo_font_fini): 
	(_cairo_font_select): 
	(_cairo_font_scale): 
	(_cairo_font_transform): 
	(_cairo_font_text_extents): 
	(_cairo_font_show_text): Return immediately if passed a NULL pointer.

2003-09-30  Jamey Sharp  <jamey@minilop.net>

	* src/Makefile.am, src/cairo.c, src/cairo.h, src/cairo_font.c,
	src/cairo_gstate.c, src/cairo_surface.c, src/cairoint.h:
	Virtualized font and surface backends. All Xlib/Xft calls are in
	cairo_xlib_surface.c/cairo-xlib.h now. Resolves a TODO item.

2003-09-30  Carl Worth  <cworth@east.isi.edu>

	* src/cairo.c (cairo_copy): Don't copy a gstate if src->status != 0.

	* src/cairo_gstate.c (_cairo_gstate_init_copy): Be careful to
	preserve gstate->next.
	(_cairo_gstate_copy): New function to support cairo_copy.

	* src/cairo.c (cairo_copy): Fixed horribly botched implementation
	of cairo_copy.
