@@ -1,3 +1,8 @@
+2003-10-11  Carl Worth  <cworth@isi.edu>
+
+	* src/cairo-xlib.h: Add extern "C" stuff. (Thanks to Soory Kuloor
+	for the reminder).
+
 2003-10-09  Carl Worth  <cworth@isi.edu>
 
 	* src/cairo_font.c: Stub out NULL_POINTER errors as
